--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,8 +1,8 @@
 name: Django CI
 
 on:
-#  push:
-#    branches: [ "develop" ]
+  push:
+    branches: [ "main","develop" ]
   pull_request:
     branches: [ "main" ]
 
