--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,6 +2,10 @@ name: Pylint
 
 on: [push]
 
+env:
+  DJANGO_SETTINGS_MODULE: signapp
+  PYTHONPATH: /home/tcunnen/Documents/SignApp
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,7 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install pylint
+        pip install pylint-django
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint --load-plugins=pylint_django signapp
