--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Code coverage
 
 on:
   push:
@@ -8,11 +8,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.10"]
+
 
     steps:
     - uses: actions/checkout@v3
@@ -24,6 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
+        pip install coverage
+    - name: Run code coverage
       run: |
-        python manage.py test
+        coverage run --source='.' manage.py test
+        coverage report --fail-under=80
