--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -9,23 +9,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.10 
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m venv env
+        source env/bin/activate
+        pip install -r django/requirements.txt
         pip install coverage
     - name: Run code coverage
       run: |
-        coverage run --source='.' manage.py test
+        coverage run  django/manage.py test
         coverage report --fail-under=80
