--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -9,20 +9,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: django
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - name: Set up Python 3.10 
+      uses: actions/setup-python@v4
       with:
         python-version: 3.10 
+    - name: Create and start virtual environment
+      run: |
+        python -m venv venv
+        source venv/bin/activate
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m venv env
-        source env/bin/activate
-        pip install -r django/requirements.txt
+        pip install -r requirements.txt
         pip install coverage
+        pip install django_coverage_plugin
     - name: Run code coverage
       run: |
-        coverage run  django/manage.py test
-        coverage report --fail-under=80
+        coverage erase
+        coverage run manage.py test
+        coverage report
