--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -9,20 +9,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: django
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: 3.10
-      - name: Run Python commands
+      - name: Create and start virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+      - name: Install Dependencies
         run: |
           pip install --upgrade pip
-          python -m venv env
-          source env/bin/activate
-          pip install -r django/requirements.txt
+          pip install -r requirements.txt
           pip install pylint
           pip install pylint-django
       - name: Analysing the code with pylint
         run: |
-          env/bin/pylint --load-plugin=pylint_django --ignore-patterns="wsgi|asgi|apps|\d{4}_initial|manage" --disable=E0401 django
+          pylint $(git ls-files '*.py')
