--- a/django/.pylintrc
+++ b/django/.pylintrc
@@ -1,15 +1,18 @@
 [MAIN]
+
 # Specify a score threshold under which the program will exit with error.
 fail-under= 10
 
 # Files or directories matching the regular expression patterns are skipped.
 # The regex matches against base names, not paths. The default value ignores
 # Emacs file locks
-ignore-patterns=^\.#|wsgi|asgi|apps|manage|\d{4}_initial
+ignore-patterns=^\.#|wsgi|asgi|apps|manage|\d{4}_initial|__init__
 
 # List of plugins (as comma separated values of python module names) to load,
 # usually to register additional checkers.
-load-plugins=pylint_django
+load-plugins=pylint_django 
+
+django-settings-module=signapp.settings
 
 [CLASSES]
 
@@ -25,7 +28,7 @@ defining-attr-methods=__init__,
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=F0001
+disable=F0001, C0114
 
 [DESIGN]
 
