--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   video_player: ^2.4.7
+  mockito: ^5.3.2
 
 dev_dependencies:
   flutter_test:
