--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,7 +2,7 @@ name: Pylint
 
 on:
   push:
-    branches: [ "main","develop" ]
+    branches: [ "main"]
   pull_request:
     branches: [ "main" ]
 
