--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 Django==4.1.2
 djangorestframework==3.14.0
+django-rest-knox==4.2.0
 python-dotenv==0.21.0
 pytz==2022.7
 sqlparse==0.4.3
