--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -21,13 +21,14 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
+  intl: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   video_player: ^2.4.7
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
