--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
+  intl: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -29,6 +29,31 @@ dependencies:
   http: ^0.13.5
   video_player: ^2.4.7
   shared_preferences: ^2.1.0
+  flutter_native_splash: ^2.2.18
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  image_path: "assets/icons/ic_launcher.png"
+  android: true
+  adaptive_icon_foreground: "assets/icons/ic_launcher_foreground.png"
+  adaptive_icon_background: "#e3000b"
+  ios: true
+  remove_alpha_ios: true
+  background_color_ios: "#e3000b"
+  web:
+    generate: true
+    image_path: "assets/icons/ic_launcher-web.png" 
+    theme_color: "#e3000b"
+    background_color: "#e3000b"
+
+flutter_native_splash:
+  color: "#e3000b"
+  icon_background_color: "#e3000b"
+  image: assets/icons/splash.png
+  android_12:
+    image: assets/icons/ic_launcher-web.png
+    color: "#e3000b"
+    icon_background_color: "#e3000b"
 
 dev_dependencies:
   flutter_test:
@@ -55,12 +80,5 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  assets:
+    - assets/icons/
